--- a/src/main/resources/translation/messages.properties
+++ b/src/main/resources/translation/messages.properties
@@ -1,2 +1,24 @@
+#Global
+name=Наименование
+unit=Ед.изм.
+description=Описание
+createdAt=Дата создания
+
+#Table
+table.filters=Фильтры
+table.showRowStart=Показать
+table.showingPageBegin=Показаны записи с
+table.showingPageMiddle=по
+table.showingPageEnd=из
+table.nothingToShow=Записи отсутствуют
+
+#Products
 products=Товары
 products.list=Список товаров
+product.name=Наименование товара
+product.createdAt=Дата создания товара
+
+#Action
+action.search=Поиск
+action.clear=Очистить
+
